assets/css/style.css
body{
  overflow: hidden;
  user-select: none;
}

#appContainer{
  margin: 0;
  padding: 20px;
  max-height: 100vh;
  max-width: 100vw;
  background-color: #0a63ac;
  overflow: hidden;
}

#desktopContainer {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  height: calc(100vh - 40px);
}

.icon {
  width: 60px;
  display: inline-block;
  margin: 15px;
  max-height: 100px;
}

.icon:hover {
  filter: brightness(1.2);
}

.icon img {
  width: 60px;
}

.icon a {
  text-decoration: none;
  color: white;
}

.icon p {
  text-align: center;
  margin-top: 0;
}

.icon-container {
  display: flex;
  flex-direction: row;
}

/***** TASKBAR *****/
#taskbarContainer {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100vw;
  background-color: rgba(30, 37, 37, 0.77);
  height: 40px;
  display: flex;
  justify-content: space-between;
  overflow: hidden;
  z-index: 20;
}

.taskbarIcon {
  width: 30px;
  height: 30px;
  padding: 5px;
}

.taskbarIcon:hover {
  background-color: rgba(26, 30, 34, 0.87);
  cursor: pointer;
}

.floatLeft {
  display: flex;
  justify-content: flex-start;
  padding-left: 5px;
  align-items: center;
}

.floatRight {
  display: flex;
  height: 40px;
  justify-content: flex-end;
  padding-right: 5px;
  align-items: center;
}

#dateTime {
  padding: 3px 12px;
}

#dateTime:hover {
  background-color: rgba(26, 30, 34, 0.87);
  cursor: pointer;
}

#dateTime p{
  margin: 2px 0;
  text-align: center;
  color: white;
}

